<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/previousMonth"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:rotation="90"
            android:src="@android:drawable/arrow_down_float" />

        <TextView
            android:id="@+id/monthName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/nextMonth"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:rotation="270"
            android:src="@android:drawable/arrow_down_float" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="P.tesi"
            android:theme="@style/WeekStyle" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Salı"
            android:theme="@style/WeekStyle" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Çarş."
            android:theme="@style/WeekStyle" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Perş."
            android:theme="@style/WeekStyle" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Cuma"
            android:theme="@style/WeekStyle" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="C.tesi"
            android:theme="@style/WeekStyle" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Pazar"
            android:theme="@style/WeekStyle" />

    </LinearLayout>

    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:clickable="true"
        android:focusable="true"
        android:numColumns="7" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/item_under_ui"
            android:orientation="vertical">

            <TextView
                style="@style/LeftTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/left_title_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_1"
                    style="@style/LeftSubtitle1"
                    />

                <TextView
                    android:text="@string/test_1"
                    style="@style/LeftValue1"
                     />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_11"
                    style="@style/LeftSubtitle1"
                    />

                <TextView
                    android:id="@+id/shiftWage"
                    android:text="0"
                    style="@style/LeftValue1"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_12"
                    style="@style/LeftSubtitle1"
                    />

                <TextView
                    android:id="@+id/extraWage"
                    android:text="0"
                    style="@style/LeftValue1"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_13"
                    style="@style/LeftSubtitle1"
                    />

                <TextView
                    android:id="@+id/interruptWage"
                    android:text="0"
                    style="@style/LeftValue1"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_14"
                    style="@style/LeftSubtitle1"
                    />

                <TextView
                    android:id="@+id/vacationInterruptWage"
                    android:text="0"
                    style="@style/LeftValue1"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_2"
                    style="@style/LeftSubtitle1"
                    />

                <TextView
                    android:id="@+id/lastWage"
                    android:text="0"
                    style="@style/LeftValue1"
                    />
            </LinearLayout>

            <TextView
                style="@style/LeftTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/left_title_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_3"
                    style="@style/LeftSubtitle2" />

                <TextView
                    android:id="@+id/midweekShift"
                    android:text="@string/test_2"
                    style="@style/LeftValue2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_4"
                    style="@style/LeftSubtitle2" />

                <TextView
                    android:id="@+id/saturdayShift"
                    android:text="@string/test_2"
                    style="@style/LeftValue2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_5"
                    style="@style/LeftSubtitle2" />

                <TextView
                    android:id="@+id/sundayShift"
                    android:text="@string/test_2"
                    style="@style/LeftValue2" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_6"
                    style="@style/LeftSubtitle2" />

                <TextView
                    android:id="@+id/totalShift"
                    android:text="@string/test_2"
                    style="@style/LeftValue2" />
            </LinearLayout>

            <TextView
                style="@style/LeftTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/left_title_3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_7"
                    style="@style/LeftSubtitle2"
                    />

                <TextView
                    android:id="@+id/unpaidVacation"
                    android:text="@string/test_2"
                    style="@style/LeftValue1"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_8"
                    style="@style/LeftSubtitle2"
                    />

                <TextView
                    android:id="@+id/paidVacation"
                    android:text="@string/test_2"
                    style="@style/LeftValue1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_9"
                    style="@style/LeftSubtitle2"
                    />

                <TextView
                    android:id="@+id/reportVacation"
                    android:text="@string/test_2"
                    style="@style/LeftValue1"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:background="@drawable/item_under_under_item">

                <TextView
                    android:text="@string/left_subtitle_10"
                    style="@style/LeftSubtitle2"
                    />

                <TextView
                    android:id="@+id/totalFeeInterruptedDay"
                    android:text="@string/test_2"
                    style="@style/LeftValue1"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="0.4"
            android:background="@drawable/item_under_ui"
            android:orientation="vertical">

            <TextView
                android:id="@+id/rightDate"
                style="@style/RightDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_date"/>

            
            <Button
                android:id="@+id/enterShiftButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_right"
                android:text="@string/right_button_1"
                style="@style/RightButton"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/enterVacationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_right"
                android:text="@string/right_button_2"
                style="@style/RightButton"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/changeWage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_right"
                android:text="@string/right_button_6"
                style="@style/RightButton"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/enterExtraButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_right"
                android:text="@string/right_button_3"
                style="@style/RightButton"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/deleteMontlyDataButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_right2"
                android:text="@string/right_button_4"
                style="@style/RightButton2"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/enterInterruptionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_right2"
                android:text="@string/right_button_5"
                style="@style/RightButton2"
                android:layout_marginVertical="5dp"
                android:textAllCaps="false"/>



        </LinearLayout>




    </LinearLayout>


</LinearLayout>